assets/stylesheets/main-staging.css
/* ... */
navbar #open-nav-btn,
navbar #close-nav-btn {
  /* used for breakpoints */
  display: none;
}

/*** APPEARANCE ***/
navbar {
  background: var(--palette--white);
  -webkit-box-shadow: var(--little-dropshadow);
  box-shadow: var(--little-dropshadow);
}

navbar #navtabs > a[role="button"] {
  border: var(--little-border);
  border-top: none;
  border-radius: 0px 0px var(--corner-roundedness) var(--corner-roundedness);
  -webkit-box-shadow: var(--little-dropshadow);
  box-shadow: var(--little-dropshadow);
  font-size: var(--font--regular);
  font-family: var(--font--main);
  text-transform: lowercase;
  background-color: var(--palette--white);
  color: var(--palette--black);
}

navbar #navtabs > a[role="button"]:hover {
  color: var(--palette--white);
  background-color: var(--palette--theme);
}

navbar #navtabs#homebanner {
  background: -webkit-gradient(linear,
      left top,
      left bottom,
      from(transparent),
      color-stop(80%),
      to(var(--palette--theme))),
    url("../images/spr_26/NiCESpring2026ShowcaseGroupPhoto.JPG");
  background-image: linear-gradient(transparent, 80%, var(--palette--theme)),
    url("../images/spr_26/NiCESpring2026ShowcaseGroupPhoto.JPG");
    background-position-y: 10%
}

navbar #navtabs#aboutbanner {
  background: url("../images/spr_26/NiCEChristmasGroupPhoto.jpg");
  background-position-y: 20%
}

navbar #navtabs#auditionsbanner {
  background: url("../images/spr_26/niceSP26-22.jpg");
  background-position-y: 9%
}

navbar #sidenav {
  background: var(--palette--theme);
  color: var(--palette--white);
}

navbar #sidenav>a[role="button"] {
  width: 100%;
  font-size: var(--font--medium);
  border-top: 0.5px solid var(--palette--white);
  border-bottom: 0.5px solid var(--palette--white);
  color: var(--palette--white);
}

navbar #sidenav>a[role="button"]:hover {
  background-color: var(--palette--theme-lighter);
}

navbar #sidenav #close-nav-btn {
  position: absolute;
  top: 0%;
  right: 0%;
  font-size: var(--font--medium);
}

navbar #open-nav-btn,
navbar #close-nav-btn {
  font-size: var(--font--medium);
  background-color: white;
}

/*** ANIMATIONS ***/
#navtabs>a[role="button"] {
  -webkit-transition: top 0.15s ease-in-out;
  transition: top 0.15s ease-in-out;
}

#sidenav {
  -webkit-transition: 0.5s;
  transition: 0.5s;
  /* 0.5 second transition effect to slide in the sidenav */
}

#sidenav a[role="button"] {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

/*------------------------------------------
# General Main Content
------------------------------------------*/
/*** LAYOUT ***/
section[role="header"] {
  padding-top: 0px;
  padding-bottom: 0px;
}

section#alumni p {
  text-align: center;
}

/*** APPEARANCE ***/
section a[role="button"] {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 0.8em 1em;
  border-radius: var(--corner-roundedness);
  border: var(--little-border);
  -webkit-box-shadow: var(--little-shadow);
  box-shadow: var(--little-shadow);
}

/* color text */
.pinktext {
  color: var(--palette--accent-darker);
}

.whitetext {
  color: var(--palette--white);
}

/* color sections */
section:not([role="banner"]).white {
  background-color: var(--palette--white);
  color: var(--palette--black);
}

section:not([role="banner"]).blue {
  background-color: var(--palette--theme);
  color: var(--palette--white);
}

section:not([role="banner"]).lightblue {
  background-color: var(--palette--theme-lighter);
  color: var(--palette--black);
}

section:not([role="banner"]).pink {
  background-color: var(--palette--accent);
  color: var(--palette--white);
}

section:not([role="banner"]).lightpink {
  background-color: var(--palette--accent-lighter);
  color: var(--palette--accent-darker);
}

/* color buttons */
main a[role="button"].white {
  background-color: var(--palette--white);
  color: var(--palette--black);
}

main a[role="button"].white:hover {
  background-color: var(--palette--grey);
  color: var(--palette--black);
}

main a[role="button"].white2lb {
  background-color: var(--palette--white);
  color: var(--palette--black);
}

main a[role="button"].white2lb:hover {
  background-color: var(--palette--theme-lighter);
  color: var(--palette--black);
}

main a[role="button"].blue {
  background-color: var(--palette--theme);
  color: var(--palette--white);
}

main a[role="button"].blue:hover {
  background-color: var(--palette--theme-lighter);
  color: var(--palette--theme-darker);
}

main a[role="button"].lightblue {
  background-color: var(--palette--theme-lighter);
  color: var(--palette--theme-darker);
}

main a[role="button"].lightblue:hover {
  background-color: var(--palette--theme);
  color: var(--palette--white);
}

main a[role="button"].lightblue2w {
  background-color: var(--palette--theme-lighter);
  color: var(--palette--theme-darker);
}

main a[role="button"].lightblue2w:hover {
  background-color: var(--palette--white);
  color: var(--palette--theme);
}

main a[role="button"].pink {
  background-color: var(--palette--accent-darker);
  color: var(--palette--white);
}

main a[role="button"].pink:hover {
  background-color: var(--palette--accent);
  color: var(--palette--white);
}

main a[role="button"].lightpink {
  background-color: var(--palette--accent-lighter);
  color: var(--palette--black);
}

main a[role="button"].lightpink:hover {
  background-color: var(--palette--accent);
  color: var(--palette--white);
}
/* ... */

